--- a/PyPoll/pyPoll_main.ipynb
+++ b/PyPoll/pyPoll_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "total_votes = 0\n",
-    "candidate_list = []\n"
+    "candidate_names = []\n",
+    "unique_list = []\n",
+    "candidate_votes = []\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(election_data, 'r') as csvfile:\n",
+    "    csvreader = csv.reader(csvfile, delimiter=',')\n",
+    "    next(csvreader)\n",
+    "    \n",
+    "    for row in csvreader:\n",
+    "       \n",
+    "        total_votes+=1\n",
+    "        candidate_names.append(row[2])\n",
+    "        \n",
+    "    for x in candidate_names:\n",
+    "        if x not in unique_list:\n",
+    "            unique_list.append(x)    \n",
+    "    \n",
+    "         \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Khan\n",
+      "Correy\n",
+      "Li\n",
+      "O'Tooley\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in unique_list:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
