--- a/PyPoll/pyPoll_main.ipynb
+++ b/PyPoll/pyPoll_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,36 +50,45 @@
     "        if x not in unique_list:\n",
     "            unique_list.append(x)    \n",
     "    \n",
-    "         \n",
+    "    for y in unique_list:\n",
+    "        \n",
+    "        candidate_votes.append(0)\n",
+    "    \n",
+    "    csvfile.seek(0)  \n",
+    "    next(csvreader)\n",
+    "    for row in csvreader:\n",
+    "        candidate_votes[unique_list.index(row[2])] += 1\n",
+    "      \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "candidate_votes[unique_list.index('Khan')] += 1\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Khan\n",
-      "Correy\n",
-      "Li\n",
-      "O'Tooley\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2218231, 704200, 492940, 105630]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for x in unique_list:\n",
-    "    print(x)"
+    "candidate_votes"
    ]
   },
   {
