--- a/PyPoll/pyPoll_main.ipynb
+++ b/PyPoll/pyPoll_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "analysis = '/Users/Alexander/DataClass/python-challenge/PyPoll/analysis/PyPoll_analysis.txt'\n",
+    "with open(analysis, 'w') as text:\n",
+    "    \n",
+    "    text.write('Election Results \\n-------------------------')\n",
+    "    text.write(f'\\nTotal Votes: {total_votes}')\n",
+    "    text.write('\\n-------------------------')\n",
+    "    for x in range(len(unique_list)):\n",
+    "        text.write(f'\\n{unique_list[x]}: {round(candidate_votes[x]/total_votes*100, 4)}% ({candidate_votes[x]})')\n",
+    " \n",
+    "    text.write('\\n-------------------------')\n",
+    "    text.write(f'\\nWinner: {unique_list[candidate_votes.index(max(candidate_votes))]}')\n",
+    "    text.write('\\n-------------------------')"
+   ]
   },
   {
    "cell_type": "code",
