final-ish update

--- a/PyBank/prework_main.ipynb
+++ b/PyBank/prework_main.ipynb
@@ -50,6 +50,8 @@
     "        total_months += 1\n",
     "        total += int(row[1])\n",
     "        change.append(int(row[1]))\n",
+    "        \n",
+    "        # had to find a way to cycle through the csv file and store infor from the previous list.\n",
     "        if int(row[1]) - last_chg > biggest_inc:\n",
     "            biggest_inc = int(row[1]) - last_chg\n",
     "            max_month = row[0]\n",
@@ -57,9 +59,10 @@
     "            biggest_dcr = int(row[1]) - last_chg\n",
     "            min_month = row[0]\n",
     "        \n",
-    "\n",
+    "        # stored variable for finding the greatest increase/decrease\n",
     "        last_chg = int(row[1])\n",
-    "\n",
+    "    \n",
+    "    #used this 'for loop' to find the average change bewteen all months\n",
     "    difference = [j-i for i, j in zip(change[:-1], change[1:])]\n",
     "    avg_change = round(sum(difference)/len(difference),2)\n",
     "   \n",
