--- a/PyPoll/pyPoll_main.ipynb
+++ b/PyPoll/pyPoll_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "[2218231, 704200, 492940, 105630]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,7 @@
     "    text.write('Election Results \\n-------------------------')\n",
     "    text.write(f'\\nTotal Votes: {total_votes}')\n",
     "    text.write('\\n-------------------------')\n",
+    "    #here I used a 'for loop' to matchup the two lists\n",
     "    for x in range(len(unique_list)):\n",
     "        text.write(f'\\n{unique_list[x]}: {round(candidate_votes[x]/total_votes*100, 4)}% ({candidate_votes[x]})')\n",
     " \n",
